--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+.text-sm {
+    font-size: 9px;
+    font-weight: bolder;
+    margin: 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.d-flex {
+    display: flex;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.align-items-center {
+    align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.justify-content-between {
+    justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.progress-bar-container {
+    width: 500px;
+    height: 3px;
+    border: 1px solid black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.progress-bar {
+    height: 3px;
+    background-color: green;
+}
+
+.progress-bar-text {
+    color: white;
+}
+
+.export {
+    margin-bottom: 10px;
+}
+
+.medium {
+    flex: 0 0 30%;
+}
+
+.big {
+    flex: 0 0 50%;
+}
+
+.small {
+    flex: 0 0 10%
 }
